syntax = "proto3";

import "bscp.io/pkg/protocol/core/base/base.proto";

package pbhook;

option go_package = "bscp.io/pkg/protocol/core/hook;pbhook";

// Group source resource reference: pkg/dal/table/hook.go
message Hook {
    uint32          id         = 1;
    HookSpec        spec       = 2;
    HookAttachment  attachment = 3;
    pbbase.Revision revision   = 4;
}

// HookSpec source resource reference: pkg/dal/table/hook.go
message HookSpec {
    string name      = 1;
    string pre_type  = 2;
    string pre_hook  = 3;
    string post_type = 4;
    string post_hook = 5;
}

// HookAttachment source resource reference: pkg/dal/table/hook.go
message HookAttachment {
    uint32 biz_id     = 1;
    uint32 app_id     = 2;
    uint32 release_id = 3;
}
